--- a/style.css
+++ b/style.css
@@ -323,8 +323,31 @@ figcaption {
     margin-bottom: 20px;
 }
 .g-programme__categories select {
-    font-size: 2rem;
+    font-size: 1.5rem;
+    background: white;
+    border: 1px solid #ccc;
+    -webkit-appearance: none;
+    padding: 4px 15px;
+    width: auto;
+}
+.g-programme__categories .select-wrapper {
+    display: inline-block;
+	position: relative;
     margin-left: 20px;
+}
+.g-programme__categories .select-wrapper:after {
+	top: 10px;
+	right: 10px;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(24, 24, 24, 0);
+	border-top-color: #181818;
+	border-width: 10px;
+	margin-left: -10px;
 }
 .g-programme__categories-label {
     font-size: 20px;
