most minor changes done

--- a/assets/colors/G.css
+++ b/assets/colors/G.css
@@ -37,6 +37,10 @@ a.g-espace-preview {
     background-color: #EA5060;
     color: #4F3244;
 }
+.g-programme__category {
+    background-color: #EA5060;
+    color: #fff;
+}
 .g-nav {
     background-color: #DDDE41;
 }
