--- a/style.css
+++ b/style.css
@@ -356,7 +356,16 @@ figcaption {
     position: relative;
     display: flex;
     padding: 30px 0;
-    border-bottom: 1px solid;
+    border-top: 1px solid;
+}
+
+.g-programme__category {
+    position: absolute;
+    top: 0;
+    background-color: #DDDE41;
+    color: #4F3244;
+    padding: 4px 8px;
+    text-transform: uppercase;
 }
 
 .g-programme__item-date {
@@ -436,6 +445,14 @@ figcaption {
     background-size: 23px;
 }
 
+.g-programme__item-new {
+    width: 130px;
+    position: absolute;
+    bottom: -20px;
+    right: 10px;
+    z-index: -1;
+}
+
 .g-programme__item-meta {
     position: relative;
     width: 220px;
@@ -465,6 +482,9 @@ figcaption {
     position: absolute;
     left: -20px;
     top: 80px;
+}
+.g-programme__item-meta .g-production__meta-duration span {
+    width: 70px;
 }
 
 /* production preview */
@@ -1547,7 +1567,9 @@ button.g-button.g-button-foldable img {
     display: none;
 }
 
-
+.g-production__meta-wrapper .g-production__meta-duration span {
+    width: 90px;
+}
 
 /* responsive */
 @media (max-width: 960px) {
@@ -1709,18 +1731,15 @@ button.g-button.g-button-foldable img {
     }
 
     .g-production__meta-wrapper {
-        position: static;
+        position: relative;
         -webkit-transform: none;
         transform: none;
         width: 100%;
+        padding-right: 10px;
     }
 
     .g-production__download {
         position: static;
-    }
-
-    .g-production__meta-duration span {
-        width: 90px;
     }
 
     .g-production__meta_lang--de,
@@ -1763,6 +1782,23 @@ button.g-button.g-button-foldable img {
     .g-next-events__item .g-production__meta_lang,
     .g-next-events__item-time {
         position: static;
+    }
+
+    .g-production__meta-duration span {
+        width: 60px;
+    }
+
+    .g-production__meta_lang--bi,
+    .g-production__meta_lang--de,
+    .g-production__meta_lang--fr {
+        max-height: 60px;
+    }
+
+    .g-production__meta-age {
+        width: 64px;
+        height: 64px;
+        line-height: 64px;
+        font-size: 2.4em;
     }
 }
 
@@ -1859,7 +1895,10 @@ button.g-button.g-button-foldable img {
 
     .g-programme__item-meta .g-production__meta-duration {
         position: relative;
-        top: -40px;
+        top: -1px;
+    }
+    .g-programme__item-meta .g-production__meta-duration span {
+        width: 50px;
     }
     .g-footer-newsletter #mc_embed_signup_scroll {
         max-width: 100%;
@@ -1891,6 +1930,11 @@ button.g-button.g-button-foldable img {
         content: '';
         display: block;
         clear: both;
+    }
+
+    .g-production__meta-wrapper .g-production__meta-age {
+        -webkit-transform: translateY(-15px) translateX(10px) rotate(12deg);
+        transform: translateY(-15px) translateX(10px) rotate(12deg);
     }
 }
 
@@ -1935,5 +1979,22 @@ button.g-button.g-button-foldable img {
     }
     .g-programm_item-transport {
         bottom: 0;
+    }
+
+    .g-production__meta-duration span {
+        width: 40px;
+    }
+
+    .g-production__meta_lang--bi,
+    .g-production__meta_lang--de,
+    .g-production__meta_lang--fr {
+        max-height: 40px;
+    }
+
+    .g-production__meta-age {
+        width: 44px;
+        height: 44px;
+        line-height: 44px;
+        font-size: 2.0em;
     }
 }
