fixed some colors

--- a/assets/colors/G.css
+++ b/assets/colors/G.css
@@ -38,7 +38,7 @@ a.g-espace-preview {
     color: #4F3244;
 }
 .g-programme__category {
-    background-color: #EA5060;
+    background-color: #4F3244;
     color: #fff;
 }
 .g-nav {
