--- a/assets/colors/V.css
+++ b/assets/colors/V.css
@@ -25,6 +25,10 @@ a,
     background-color: #DDDE41;
     color: #fff;
 }
+.g-programme__category {
+    background-color: #DDDE41;
+    color: #4f3244;
+}
 .g-lang-change__item {
     background: #4F3244;
 }
