--- a/style.css
+++ b/style.css
@@ -362,8 +362,8 @@ figcaption {
 .g-programme__category {
     position: absolute;
     top: 0;
-    background-color: #DDDE41;
-    color: #4F3244;
+    background-color: #4F3244;
+    color: #fff;
     padding: 4px 8px;
     text-transform: uppercase;
 }
@@ -1987,7 +1987,7 @@ button.g-button.g-button-foldable img {
     }
 
     .g-programme__item-meta {
-        display: none;
+        padding-top: 10px;
     }
 
     .g-programme__item-reservation,
@@ -2006,12 +2006,15 @@ button.g-button.g-button-foldable img {
     .g-production__meta_lang--de,
     .g-production__meta_lang--fr {
         max-height: 40px;
+        margin-top: 20px;
     }
 
     .g-production__meta-age {
-        width: 44px;
-        height: 44px;
-        line-height: 44px;
-        font-size: 2.0em;
+        width: 44px !important;
+        height: 44px !important;
+        line-height: 44px !important;
+        font-size: 2.0em !important;
+        margin-top: 18px !important;
+        margin-right: 0 !important;
     }
 }
